# arxiv_recommender

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  REFACTORING_PLAN.md  api_gen.py  cli.py  doc2vec_text_mining.py  doc2vec_train.py  main.py  paper_get.py  pyproject.toml  requirements.txt  text_mining.py  vectorize.py
.github/workflows/: ci.yml
applications/: paper_get.py
arxiv/utils/: download.py
arxiv_recommender.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
arxiv_recommender/arxiv_paper_fetcher/: download.py  fetcher.py  parser.py  utils.py
arxiv_recommender/recommendation/: maximum_single_pair.py  recommendation.py
arxiv_recommender/schemas/: __init__.py  config.py  paper.py
arxiv_recommender/text_vectorization/: distil_bert.py  open_llama.py  vectorize.py
arxiv_recommender/utils/: json_handler.py  model_loader.py  paper_loader.py  user_input.py
src/arxiv_recommender/: cli.py
src/arxiv_recommender/arxiv_paper_fetcher/: fetcher.py  parser.py
src/arxiv_recommender/recommendation/: recommendation.py
src/arxiv_recommender/schemas/: config.py  paper.py
src/arxiv_recommender/text_vectorization/: __init__.py  cache.py  (+1 more)
tests/arxiv_paper_fetcher/: test_fetcher.py  test_parser.py  test_utils.py
tests/recommendation/: test_recommender.py
tests/schemas/: test_config.py  test_paper.py
tests/text_vectorization/: test_cache.py  test_distil_bert.py  test_open_llama.py  test_vectorize.py
tests/utils/: test_json_handler.py  test_logging.py  test_metrics.py  test_model_loader.py  test_paper_loader.py  test_user_input.py
(+6 files in other folders)
