[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-recommender"
version = "0.1.0"
description = "Content-based arXiv paper recommender system using configurable embedding models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
    "torch>=2.0",
    "transformers>=4.0",
    "scikit-learn>=1.0",
    "requests>=2.28",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1", "mypy>=1.0", "pre-commit>=3.0", "types-requests"]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

[tool.pre-commit]
default_install_hook_types = ["pre-commit", "commit-msg"]
default_stages = ["pre-commit"]

[dependency-groups]
dev = [
    "types-requests>=2.33.0.20260408",
]
